# shopDjango

./: pyproject.toml
myshop/: db.sqlite3
myshop/cart/: cart.py  forms.py  views.py
myshop/cart/templates/cart/: detail.html
myshop/myshop/: celery.py  settings.py  urls.py
myshop/orders/: admin.py  models.py  tasks.py  urls.py  views.py
myshop/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py
myshop/orders/templates/admin/orders/order/: detail.html
myshop/orders/templates/orders/order/: pdf.html
myshop/payment/: urls.py  views.py
myshop/payment/application/: webhooks.py
myshop/shop/: models.py  views.py
myshop/shop/migrations/: 0001_initial.py
myshop/shop/templates/shop/: base.html
myshop/shop/templates/shop/product/: detail.html
