[project]
name = "shopdjango"
version = "0.1.0"
description = "Online store created based on Antonio Melé's book Django 4 By Example."
authors = [
    {name = "Aleksan.Jhangiryan",email = "lernagorc90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "asgiref (==3.5.2)",
    "django (>=4.1.0,<4.2.0)",
    "sqlparse (==0.4.2)",
    "pillow (==9.2.0)",
    "flower (==1.2.0)",
    "celery (==5.2.7)",
    "stripe (==4.0.2)",
    "dotenv (>=0.9.9,<0.10.0)",
    "weasyprint (==56.1)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8-bugbear = "24.4.26"
flake8-comprehensions = "3.14.0"
django-debug-toolbar = "4"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
skip = ["migrations", ".venv", "venv"]